# hackathon-T1-NN

./: .env.example  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
app/: config.py  constants.py  database.py  dependencies.py  exceptions.py  logging.py  main.py  models.py  schemas.py
app/common/: config.py  exceptions.py  logging.py
app/events/: event_handler.py  event_handler_factory.py
app/lifecycle/: app_lifecycle.py
app/migrations/: env.py
app/migrations/versions/: 2025_09_19_2327-4e7d3dfeebd4_initial_migration.py  2025_09_19_2346-619c87e68fde_fix_employee_skills_relationships.py  2025_09_19_2352-3957d3e4de51_fix_employee_skills_relationships_ver2.py  2025_09_20_0944-f2c8b85115fb_gamification.py  2025_09_20_1110-3687b4441c19_remove_quest_required_actions_and_quest_.py  2025_09_20_1302-827e2f10be5c_added_matches.py
app/repositories/: employee_repository.py  employee_skill_repository.py  quest_repository.py  skill_repository.py
app/routers/: employee_router.py  skill_router.py
app/routers/v1/: employee_router.py  employee_skill_router.py  quest_router.py  skill_router.py  tip_routers.py
app/services/: employee_service.py  employee_skill_service.py  event_dispatcher_service.py  quest_service.py  skill_service.py
